--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "browser-sync": "^2.26.7",
     "gulp": "^3.9.1",
     "gulp-connect": "^2.2.0",
-    "gulp-sass": "^2.3.2"
+    "gulp-sass": "^2.3.2",
+    "stickybits": "^3.7.7"
   },
   "bugs": {
     "url": "https://github.com/akndesign/misfits-prelaunch/issues"
